--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>이건 새로운 기능!!</title>
+    <title>충돌이 날까?!!</title>
   </head>
   <body>
-    <p>충돌이 날거야...</p>
+    <p>메인 브랜치입니다!</p>
   </body>
 </html>
